[package]
name = "scale"
version = "0.1.0"
authors = ["stephaneworkspace"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["lib", "staticlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.1"

[build-dependencies]
cbindgen = "0.12"
